--- a/lab/02/01/index.html
+++ b/lab/02/01/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
 
     <script>
+        function isModuloZero(a, b){
+            return b > a ?
+                "b ne peut pas être plus grand que a" :
+                a % b === 0;
+        }
     </script>
 
 </head>
